<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_registration"
        android:name="com.example.goodsshop.Registration"
        android:label="@string/title_registration"
        tools:layout="@layout/fragment_registration" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.goodsshop.Category"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.goodsshop.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_chatting"
        android:name="com.example.goodsshop.Chatting"
        android:label="@string/title_chatting"
        tools:layout="@layout/fragment_chatting" />

    <fragment
        android:id="@+id/navigation_mypage_login"
        android:name="com.example.goodsshop.MypageLogin"
        android:label="@string/title_mypage_login"
        tools:layout="@layout/fragment_mypage_login" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.example.goodsshop.Mypage"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_mypage" >

        <action android:id="@+id/navigation_mypage_login"
            app:destination="@+id/navigation_mypage_login"/>

    </fragment>

<!--    <fragment-->
<!--        android:id="@+id/navigation_mypage_login"-->
<!--        android:name="com.example.goodsshop.MypageLogin"-->
<!--        android:label="@string/title_mypage_login"-->
<!--        tools:layout="@layout/fragment_mypage_login" >-->

<!--        <action android:id="@+id/navigation_login_to_mypage"-->
<!--            app:destination="@+id/navigation_mypage"/>-->

<!--    </fragment>-->
</navigation>