<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindPassword"
    android:layout_margin="28dp">

    <EditText
        android:id="@+id/pnumEditText"
        android:layout_width="218dp"
        android:layout_height="45dp"
        android:layout_marginTop="45dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/findPw_pNumEditText"
        android:inputType="phone"
        android:background="@drawable/edittext_border_gray"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/sendVerifCodeBtn"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="213dp"
        android:text="@string/findPw_sendVerifCodeBtn"
        android:textColor="#ffffff"
        android:background="@drawable/colorprimary_round_btn_with_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints,RtlCompat"/>

    <EditText
        android:id="@+id/verifCodeEditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/findPw_VerifCodeEditText"
        android:inputType="number"
        android:background="@drawable/edittext_border_gray"
        app:layout_constraintTop_toBottomOf="@+id/pnumEditText"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/pwEditText"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/findPw_pwEditText"
        android:maxLength="10"
        android:inputType="textPassword"
        android:privateImeOptions="defaultInputmode=english"
        android:background="@drawable/edittext_border_gray"
        app:layout_constraintTop_toBottomOf="@+id/verifCodeEditText"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/pwAgainEditText"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/findPw_pwAgainEditText"
        android:maxLength="10"
        android:inputType="textPassword"
        android:privateImeOptions="defaultInputmode=english"
        android:background="@drawable/edittext_border_gray"
        app:layout_constraintTop_toBottomOf="@+id/pwEditText"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/joinBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/findPw_changePwBtn"
        android:textColor="#ffffff"
        android:background="@drawable/colorprimary_round_btn"
        app:layout_constraintTop_toBottomOf="@+id/pwAgainEditText"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>