<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginCLayout"
    android:background="#ffffff"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MypageLogin">

    <ProgressBar
        android:id="@+id/myPageProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="60dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/loginTextView"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_loginTextView"
                android:textColor="#000000"
                android:textSize="35sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                tools:ignore="MissingConstraints"/>

            <Button
                android:id="@+id/loginEmailBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/login_loginEmailBtn"
                android:textColor="#ffffff"
                android:background="@drawable/colorprimary_round_btn"
                app:layout_constraintTop_toBottomOf="@id/loginTextView"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/loginGoogleBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_loginGoogleBtn"
                android:background="@drawable/google_round_btn"
                app:layout_constraintTop_toBottomOf="@+id/loginEmailBtn"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/loginTwitterBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_loginTwitterBtn"
                android:textColor="#ffffff"
                android:background="@drawable/twitter_round_btn"
                app:layout_constraintTop_toBottomOf="@+id/loginGoogleBtn"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/loginFacebookBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_loginFacebookBtn"
                android:textColor="#ffffff"
                android:background="@drawable/facebook_round_btn"
                app:layout_constraintTop_toBottomOf="@+id/loginTwitterBtn"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/joinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/login_joinTextView"
                android:textSize="15sp"
                android:background="@drawable/change_color_click_transparent"
                app:layout_constraintTop_toBottomOf="@id/loginFacebookBtn"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                tools:ignore="MissingConstraints"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>